# MagicSquare_30

./: .cursorrules  .gitignore  README.md  pyproject.toml  requirements.txt
Prompt/: transcript-full-replay.md  transcript-interactive-prompt.md  transcript-raw.jsonl
Prompting/: 02.Full_Implementation_Prompt_Transcript.md
Report/: 01.ProblemDefinition_Report.md  02.CleanArchitecture_DualTrack_TDD_Design_Report.md  03.DevelopmentEnvironment_CursorRules_ECB_Report.md  04.UserJourney_Epic_to_TechnicalScenario_Report.md  4x4-magic-square-problem-recognition.md
docs/: LEARNING_OUTCOMES.md  NEXT_PROJECT_PLAN.md  PRD_MagicSquare.md  RETROSPECTIVE.md  SESSION_GUIDE.md  TODO_DEVELOPMENT.md
src/boundary/: __init__.py  error_mapper.py  input_validator.py  schemas.py  ui_boundary.py  validation_result.py
src/control/: __init__.py  solve_partial_magic_square.py
src/entity/: __init__.py
src/entity/exceptions/: domain_errors.py
src/entity/services/: empty_cell_locator.py  magic_square_validator.py  missing_number_finder.py  two_cell_solver.py
templates/: ACTION_ITEMS_TEMPLATE.md
tests/: conftest.py  test_golden_master.py
tests/boundary/: test_ac_fr_01_01_input_validation.py  test_error_mapper.py  test_input_validator.py  test_main_window.py  test_u_flow_02_domain_isolation.py  test_u_in_04_08_input_validation.py  test_u_out_01_03_output_contract.py  test_ui_boundary.py
tests/control/: test_solve_partial_magic_square.py
tests/entity/: test_d_sol_01_04_two_cell_solver.py  test_d_val_01_06_magic_square_validator.py  test_domain_services.py
(+1 files in other folders)
